syntax = "proto3";

import "Model.proto";

package cn.unipus.modeladapter.api.proto.client.service;
option java_multiple_files = true;

service CourseService {
    // 新建单元接口
    rpc createUnit (cn.unipus.modeladapter.api.proto.client.model.CreateUnitRequestPO) returns (cn.unipus.modeladapter.api.proto.client.model.CreateUnitResponsePO);

    // 课程发布接口
    rpc publishCourse (cn.unipus.modeladapter.api.proto.client.model.PublishCourseRequestPO) returns (cn.unipus.modeladapter.api.proto.client.model.PublishCourseResponsePO);

    // 修改单元名称
    rpc updateUnitName (cn.unipus.modeladapter.api.proto.client.model.UpdateUnitNameRequestPO) returns (cn.unipus.modeladapter.api.proto.client.model.UpdateUnitNameResponsePO);

    // 删除单元
    rpc deleteUnit (cn.unipus.modeladapter.api.proto.client.model.DeleteUnitRequestPO) returns (cn.unipus.modeladapter.api.proto.client.model.DeleteUnitResponsePO);
}
